--- a/posts/privacy/2012-06-14-the-new-privacy-invading-facebook-like-button.org
+++ b/posts/privacy/2012-06-14-the-new-privacy-invading-facebook-like-button.org
@@ -6,6 +6,7 @@ description:       "Facebook's new user tracking policy at the cost of your priv
 date:              "2012-06-14 Thu 10:51:01"
 layout:            post
 comments:          true
+categories:        [privacy, online-freedom] 
 published:         true
 ---
 #+END_HTML
