--- a/posts/projects/spg/2012-06-10-secure-password-generator.org
+++ b/posts/projects/spg/2012-06-10-secure-password-generator.org
@@ -5,7 +5,7 @@ layout:         post
 title1:         "SPG: The Secure Password Generator"
 date:           2012-06-10 16:48
 comments:       true
-categories:     [security,passwords,password-generator]
+categories:     [security,passwords,password-generator,projects]
 published:      true
 ---
 
